gateway/k8s/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert-gateway
  labels:
    app: convert-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convert-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: convert-gateway
    spec:
      containers:
        - name: convert-gateway
          image: quangdvn/convert-gateway
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: convert-gateway
spec:
  selector:
    app: convert-gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
